# Train-YOLO-Model

./: .gitignore  README.dataset.txt  README.md  README.roboflow.txt  data.yaml  data_mouse.yaml  pyproject.toml  test_model.py  train_yolo26.py  use_pretrained.py  verify_model.py
quantization/: quantize_tflite.py
runs/train/yolo26_bottle/: args.yaml  (+1 more)
test/labels/: 943303e7-f64a-48ad-8b4a-4f82261e0f26_jpg.rf.f877b9962353b04ab068920969ab5c98.txt  IMG_2654_jpg.rf.9545ff2772ce7e6c59a4da2538c98c62.txt  IMG_2665_jpg.rf.e1c1e2a2c3529afb20b12739b35fc5e9.txt  IMG_2672_jpg.rf.b3012d0fb3b42b3afcd784dde80896b7.txt  IMG_2675_jpg.rf.bc96657f162d14d30047e2cbaba7c2b4.txt  IMG_2682_jpg.rf.035da1f5a22ad0907d1d9acb265b0a8b.txt  ProZArt-1-_jpg.rf.a0ea7eae99ed812b49cb101a7b5f475d.txt  ProZArt-14-_jpg.rf.993605864e297d23262f5345d2ead1c7.txt  ProZArt-20-_jpg.rf.e6c1181b4f7ac1fc1e03505009b2bbc1.txt  ProZArt-34-_jpg.rf.0c2bf327f9671fa784444f79e4e13bc1.txt  ProZArt-34-_jpg.rf.243ce56b3174489bb772e8a632ca8304.txt  ProZArt-35-_jpg.rf.437d43c9a065dc276cab4a5b70ca49bd.txt  ProZArt-35-_jpg.rf.54a722c8e0a4cf5e9d967c83c04138f8.txt  ProZArt-41-_jpg.rf.004f30324723d22b07e7a0fcfad47a53.txt  ProZArt-41-_jpg.rf.00aba1f84ac637ac3eb116dbd5f0a1f9.txt  ProZArt-47-_jpg.rf.2922ead34e0dcf4bca9c377d9894390e.txt  ProZArt-47-_jpg.rf.a11ffe83c164cd9a72cd096596b22624.txt  ProZArt-51-_jpg.rf.0f562dc70c98dfd81cba2ae5d9389af6.txt  ProZArt-51-_jpg.rf.ab299bd671b40ad524acc015d5b92ef1.txt  d132ec95-2840-4015-967c-ebf34d6d760f_jpg.rf.e743c532037c14ce440314fae3d535fe.txt  (+5 more)
train/: labels.cache
valid/: labels.cache
(+197 files in other folders)
