[project]
name = "train-yolo-model"
version = "0.1.0"
description = "YOLO object detection fine-tuning pipeline"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ultralytics>=8.4.0",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "torchaudio>=2.10.0",
    "opencv-python>=4.13.0",
    "matplotlib>=3.10.0",
    "pyyaml>=6.0",
    "numpy>=2.3.0",
]

[tool.uv.sources]
torch = [{ index = "pytorch-cu130" }]
torchvision = [{ index = "pytorch-cu130" }]
torchaudio = [{ index = "pytorch-cu130" }]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
